--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,14 @@ body {
 .btn{
   border: none;
 }
-
-/*-------------- HEADER-------------- */
-
-.container{
+.container {
   width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
 }
+
+/*-------------- HEADER-------------- */
+
 header .container{
   display: flex;
   align-items: center;
@@ -89,9 +89,15 @@ header .container{
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+
 }
 .nav-item:not(:last-child){
   margin-right: 50px;
+}
+.nav-item{
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .header-link:hover,
@@ -111,6 +117,10 @@ header .container{
 .contact-item:not(:first-child){
   margin-left: 50px;
 }
+.contact-item{
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
 
 
 
@@ -121,7 +131,7 @@ header .container{
 
 
 /*-------------- HERO------------ */
-.hero-contend {
+.hero {
   background-color: var(--second-bg-color);
   padding-top: 200px;
   padding-bottom: 200px;
@@ -132,9 +142,12 @@ header .container{
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
+  letter-spacing: 0.06em;
   text-transform: uppercase;
+
+
   text-align: center;
-  max-width: 696px;
+  max-width: 650px;
   margin: 0 auto ;
   margin-bottom: 30px;
 }
@@ -148,6 +161,8 @@ header .container{
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
+
+  padding: 10px 32px;
   margin: 0 auto;
 
 }
@@ -163,12 +178,16 @@ header .container{
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  letter-spacing: 0.03em;
   color: #212121;
 
   margin-bottom: 10px;
 }
 .features-list{
   display: flex;
+}
+.features-item{
+  width: 270px;
 }
 .features-item:not(:last-child){
   margin-right: 30px;
@@ -204,9 +223,14 @@ header .container{
 /*-------------- TEAM------------ */
 .team{
   padding-bottom: 94px;
+  padding-top: 94px;
+  background-color: #F5F4FA;
 }
 .team-list{
   display: flex;
+}
+.team-item{
+  width: 270px;
 }
 .team-item:not(:last-child){
   margin-right: 30px;
@@ -217,11 +241,7 @@ header .container{
   letter-spacing: 0.03em;
   color: var(--second-fonts-color);
   text-align: center;
-  letter-spacing: 0.03em;
   margin-bottom: 50px;
-}
-.team-img{
-  margin-bottom: 30px;
 }
 .team-name {
   font-weight: 500;
@@ -240,6 +260,10 @@ header .container{
   letter-spacing: 0.03em;
   text-align: center;
   letter-spacing: 0.03em;
+}
+.team-about{
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 
@@ -284,9 +308,12 @@ header .container{
 }
 
 /*-------------- PORFOLIO------------ */
-.porfolio{
+.portfolio{
   padding-top: 94px;
   padding-bottom: 94px;
+}
+.portfolio-header{
+  border-bottom: 1px solid #ECECEC;
 }
 .portfolio-btn {
   font-family: inherit;
@@ -297,8 +324,7 @@ header .container{
   color: var(--second-fonts-color);
 
 
-  padding-left: 22px;
-  padding-right: 22px;
+  padding: 6px 22px;
 
 }
 .portfolio-item:not(:last-child){
@@ -336,4 +362,8 @@ header .container{
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
+}
+.example-about{
+  padding: 20px 0 20px 24px;
+  border: solid 1px #EEEEEE;
 }
